--- a/package.json
+++ b/package.json
@@ -1,35 +1,30 @@
 {
-  "private": true,
   "scripts": {
-    "lint:prettier": "prettier src --check",
-    "lint:eslint": "eslint src",
+    "lint:prettier": "prettier src/*.{ts,tsx} --check",
+    "lint:eslint": "eslint src/*.{ts,tsx}",
     "lint": "run-p lint:*",
     "fix:prettier": "npm run lint:prettier -- --write",
     "fix:eslint": "npm run lint:eslint -- --fix",
     "fix": "run-s fix:*",
-    "build:webpack": "webpack --mode=production",
-    "build:stylus": "stylus src/style --out out",
-    "build:copy": "node -e \"require('fs-extra').copySync('public', 'out')\"",
+    "build:vite": "vite build",
     "build": "run-p build:*",
     "routine": "run-s fix build",
-    "monitor": "nodemon --ignore out --exec \"npm run routine\""
+    "monitor": "nodemon --ignore out --exec 'npm run routine'"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.188",
-    "@types/webpack": "^5.28.0",
+    "@types/chrome": "^0.0.188",
+    "@types/node": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "fs-extra": "^10.1.0",
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
-    "stylus": "^0.58.1",
-    "ts-loader": "^9.3.0",
-    "ts-node": "^10.8.0",
-    "typescript": "^4.7.2",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
+    "typescript": "^4.6.4",
+    "vite": "^2.9.9",
+    "vite-plugin-chrome-extension": "^0.0.7",
+    "vite-plugin-solid": "^2.2.6"
+  },
+  "dependencies": {
+    "solid-js": "^1.4.2"
   }
 }
