--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,28 @@
 {
   "compilerOptions": {
-		"outDir": "out",
-    "target": "ESNext",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "typeRoots": ["node_modules/@types"]
+      "target": "esnext",
+      "module": "esnext",
+      "moduleResolution": "node",
+      "strict": true,
+      "sourceMap": true,
+      "resolveJsonModule": true,
+      "esModuleInterop": true,
+      "lib": [
+          "esnext",
+          "dom"
+      ],
+      "types": [
+          "@types/chrome",
+      ],
+      "importHelpers": true,
+      "removeComments": true,
+      "forceConsistentCasingInFileNames": true,
+      "baseUrl": ".",
+      "paths": {
+          "@/*": ["src/*"],
+      },
   },
-  "exclude": ["node_modules"]
+  "include": [
+      "src",
+  ]
 }
