--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "scripts": {
-    "lint:prettier": "prettier src/*.{ts,tsx} --check",
-    "lint:eslint": "eslint src/*.{ts,tsx}",
+    "lint:eslint": "eslint src/**/*.{ts,tsx}",
     "lint": "run-p lint:*",
-    "fix:prettier": "npm run lint:prettier -- --write",
     "fix:eslint": "npm run lint:eslint -- --fix",
     "fix": "run-s fix:*",
     "build:vite": "vite build",
@@ -17,6 +15,8 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-solid": "^0.6.0",
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.6.4",
