--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-solid": "^0.6.0",
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
+    "stylus": "^0.58.1",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vite-plugin-chrome-extension": "^0.0.7",
