--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -31,6 +31,7 @@ rules:
     - error
     - always
   react/react-in-jsx-scope: off
+  react/no-unknown-property: off
   react/jsx-wrap-multilines:
     - "error"
     -
