--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "scripts": {
     "lint:eslint": "eslint src/**/*.{ts,tsx}",
+    "lint:stylelint": "stylelint src/**/*.styl",
     "lint": "run-p lint:*",
     "fix:eslint": "npm run lint:eslint -- --fix",
+    "fix:stylelint": "npm run lint:stylelint -- --fix",
     "fix": "run-s fix:*",
     "build:vite": "vite build",
     "build": "run-p build:*",
@@ -19,6 +21,8 @@
     "eslint-plugin-solid": "^0.6.0",
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
+    "stylelint": "^14.8.5",
+    "stylelint-plugin-stylus": "^0.13.1",
     "stylus": "^0.58.1",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
