📏: rule warn unused-imports
rule unused-imports/no-unused-imports-ts

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,6 +8,7 @@ parserOptions:
   sourceType: module
 plugins:
   - "@typescript-eslint"
+  - unused-imports
   - "react"
   - "solid"
 extends:
@@ -21,6 +22,7 @@ settings:
     version: "15.0"
 rules:
   "@typescript-eslint/no-empty-function": off
+  unused-imports/no-unused-imports-ts: warn
   semi:
     - error
     - always
