--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-solid": "^0.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
     "stylelint": "^14.8.5",
