--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -44,6 +44,7 @@ rules:
   react/react-in-jsx-scope: off
   react/no-unknown-property: off
   react/jsx-key: off
+  react/prop-types: off
   react/jsx-wrap-multilines:
     - "error"
     -
