📏: rule no-trailing-spaces

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -41,6 +41,7 @@ rules:
   object-curly-newline:
     - error
     - always
+  no-trailing-spaces: error
   react/react-in-jsx-scope: off
   react/no-unknown-property: off
   react/jsx-key: off
